Logging in table models