@@ -3,16 +3,18 @@ package de.etgramli.mediathekhear.ui;
 import de.etgramli.mediathekhear.model.EpisodeDTO;
 import de.etgramli.mediathekhear.model.persistence.EpisodeRepository;
 import org.jetbrains.annotations.Nls;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import javax.swing.table.AbstractTableModel;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class EpisodeTableModel extends AbstractTableModel {
+    private static final Logger logger = LoggerFactory.getLogger(EpisodeTableModel.class);
     private static final String[] COLUMN_NAMES = {"Id", "Titel", "Dauer", "Veröffentlichung", "Zusammenfassung"};
 
     @Autowired
@@ -22,7 +24,8 @@ public class EpisodeTableModel extends AbstractTableModel {
     @Override
     public int getRowCount() {
         if (episodes == null) {
-            episodes = repository.findAll().stream().map(EpisodeDTO::of).collect(Collectors.toList());
+            episodes = repository.findAll().stream().map(EpisodeDTO::of).toList();
+            logger.info(String.format("Queried %d episodes from repository.", episodes.size()));
         }
         return episodes.size();
     }
@@ -56,6 +59,10 @@ public class EpisodeTableModel extends AbstractTableModel {
 
     @Override
     public Object getValueAt(final int row, final int column) {
+        if (episodes == null) {
+            episodes = repository.findAll().stream().map(EpisodeDTO::of).toList();
+            logger.info(String.format("Queried %d episodes from repository.", episodes.size()));
+        }
         final EpisodeDTO episode = episodes.get(row);
         return switch (column) {
             case 0 -> episode.id();
