@@ -3,15 +3,17 @@ package de.etgramli.mediathekhear.ui;
 import de.etgramli.mediathekhear.model.ProgramsetsDTO;
 import de.etgramli.mediathekhear.model.persistence.ProgramsetsRepository;
 import org.jetbrains.annotations.Nls;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import javax.swing.table.AbstractTableModel;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ProgramsetsTableModel extends AbstractTableModel {
+    private static final Logger logger = LoggerFactory.getLogger(ProgramsetsTableModel.class);
     private static final String[] COLUMN_NAMES = {"Id", "Titel", "Anzahl Episoden", "Sender", "Zusammenfassung"};
 
     @Autowired
@@ -21,7 +23,8 @@ public class ProgramsetsTableModel extends AbstractTableModel {
     @Override
     public int getRowCount() {
         if (programsets == null) {
-            programsets = repository.findAll().stream().map(ProgramsetsDTO::of).collect(Collectors.toList());
+            programsets = repository.findAll().stream().map(ProgramsetsDTO::of).toList();
+            logger.info(String.format("Queried %d programsets from repository.", programsets.size()));
         }
         return programsets.size();
     }
@@ -56,6 +59,7 @@ public class ProgramsetsTableModel extends AbstractTableModel {
     public Object getValueAt(final int row, final int column) {
         if (programsets == null) {
             programsets = repository.findAll().stream().map(ProgramsetsDTO::of).toList();
+            logger.info(String.format("Queried %d programsets from repository.", programsets.size()));
         }
         final ProgramsetsDTO programset = programsets.get(row);
         return switch (column) {
